unpackaged/main/default/objects/Product_Health_Report__c/Product_Health_Report__c.object-meta.xml
<CustomObject>
    <label>Product Health Report</label>
    <nameField>
        <displayFormat>H-{0000000}</displayFormat>
        <label>Health Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Health Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>