unpackaged/main/default/objects/Product_Health_Report__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Products_SDM_Visit_Cycle__r.Account__r.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>