unpackaged/main/default/objects/Product_Health_Report__c/fields/Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Code__c</fullName>
    <formula>Products_SDM_Visit_Cycle__r.Account__r.Account_Code__c</formula>
    <label>Account Code</label>
    <type>Text</type>
</CustomField>