unpackaged/main/default/objects/Product_Health_Report__c/fields/Budget_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Budget_Action_Plan__c</fullName>
    <label>Budget Action Plan</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>