unpackaged/main/default/objects/Product_Health_Report__c/fields/CCE_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>CCE_Action_Plan__c</fullName>
    <label>CCE Action Plan</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>