unpackaged/main/default/objects/Product_Health_Report__c/fields/Debtors__c.field-meta.xml
<CustomField>
    <fullName>Debtors__c</fullName>
    <label>Debtors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RAG_Status</valueSetName>
    </valueSet>
</CustomField>