unpackaged/main/default/objects/Product_Health_Report__c/fields/Debtors_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Debtors_Action_Plan__c</fullName>
    <label>Debtors Action Plan</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>