unpackaged/main/default/objects/Product_Health_Report__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>TEXT(Products_SDM_Visit_Cycle__r.Product__c)</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>