unpackaged/main/default/objects/Product_Health_Report__c/fields/Products_SDM_Visit_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Products_SDM_Visit_Cycle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Products &amp; SDM Visit Cycle</label>
    <referenceTo>PCSM_Visit_Cyc__c</referenceTo>
    <relationshipName>AMS_Health_Reports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>