unpackaged/main/default/objects/Product_Health_Report__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Report Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>