unpackaged/main/default/objects/Product_Health_Report__c/fields/Resourcing_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Resourcing_Action_Plan__c</fullName>
    <label>Resourcing Action Plan</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>