unpackaged/main/default/objects/Product_Health_Report__c/fields/Risks_Issues_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Risks_Issues_Action_Plan__c</fullName>
    <label>Risks &amp; Issues Action Plan</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>