unpackaged/main/default/objects/Product_Health_Report__c/fields/T1_Benefits_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>T1_Benefits_Action_Plan__c</fullName>
    <label>T1 Benefits Action Plan</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>