unpackaged/main/default/objects/Product_Health_Report__c/fields/T1_Product__c.field-meta.xml
<CustomField>
    <fullName>T1_Product__c</fullName>
    <defaultValue>&#39;Green&#39;</defaultValue>
    <label>T1 Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RAG_Status</valueSetName>
    </valueSet>
</CustomField>