unpackaged/main/default/objects/Product_Health_Report__c/fields/T1_Product_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>T1_Product_Action_Plan__c</fullName>
    <label>T1 Product Action Plan</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>