unpackaged/main/default/objects/Product_Health_Report__c/validationRules/Budget_Action_Plan_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_Action_Plan_Required</fullName>
    <active>true</active>
    <description>Budget Action Plan is Required for Red/Amber Action</description>
    <errorConditionFormula>($Profile.Name &lt;&gt; &quot;System Administrator&quot;) &amp;&amp; 
TEXT(Budget__c) &lt;&gt; &#39;Green&#39; &amp;&amp; 
ISBLANK(Budget_Action_Plan__c)</errorConditionFormula>
    <errorDisplayField>Budget_Action_Plan__c</errorDisplayField>
    <errorMessage>Budget Action Plan is Required for Red/Amber Budget Status</errorMessage>
</ValidationRule>