unpackaged/main/default/objects/Product_Health_Report__c/validationRules/CCE_Action_Plan_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CCE_Action_Plan_Required</fullName>
    <active>true</active>
    <description>CCE Action Plan is Required for Red/Amber CCE Status</description>
    <errorConditionFormula>($Profile.Name &lt;&gt; &quot;System Administrator&quot;) &amp;&amp; 
TEXT(CCE__c) &lt;&gt; &#39;Green&#39; &amp;&amp; 
ISBLANK(CCE_Action_Plan__c)</errorConditionFormula>
    <errorDisplayField>CCE_Action_Plan__c</errorDisplayField>
    <errorMessage>CCE Action Plan is Required for Red/Amber CCE Status</errorMessage>
</ValidationRule>