unpackaged/main/default/objects/Product_Health_Report__c/validationRules/Resourcing_Action_Plan_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Resourcing_Action_Plan_Required</fullName>
    <active>true</active>
    <description>Resourcing Action Plan is Required for Red/Amber Resourcing Status</description>
    <errorConditionFormula>($Profile.Name &lt;&gt; &quot;System Administrator&quot;) &amp;&amp; 
TEXT(Resourcing__c) &lt;&gt; &#39;Green&#39; &amp;&amp; 
ISBLANK(Resourcing_Action_Plan__c)</errorConditionFormula>
    <errorDisplayField>Resourcing_Action_Plan__c</errorDisplayField>
    <errorMessage>Resourcing Action Plan is Required for Red/Amber Resourcing Status</errorMessage>
</ValidationRule>