unpackaged/main/default/objects/Product_Health_Report__c/validationRules/T1_Product_Action_Plan_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>T1_Product_Action_Plan_Required</fullName>
    <active>true</active>
    <description>T1 Product Action Plan is Required for Red/Amber T1 Product Status</description>
    <errorConditionFormula>($Profile.Name &lt;&gt; &quot;System Administrator&quot;) &amp;&amp; 
TEXT(T1_Product__c) &lt;&gt; &#39;Green&#39; &amp;&amp; 
ISBLANK(T1_Product_Action_Plan__c)</errorConditionFormula>
    <errorDisplayField>T1_Product_Action_Plan__c</errorDisplayField>
    <errorMessage>T1 Product Action Plan is Required for Red/Amber T1 Product Status</errorMessage>
</ValidationRule>